--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -79,35 +79,39 @@ body {
 /*ids--highter the zindex, higher priority*/
 
 #video-level {
-z-index: 1;
+z-index: 2;
+position: relative;
+
 }
 #video-level .parallax-layer-4 {
 	background-color: #b8d3ff;
 }
 
 #clouds-level {
-z-index: 2;
+z-index: 3;
+position: relative;
+
 }
 #clouds-level .parallax-layer-4 {
 	background-color: #fff2b3;
 }
 
 #city-level {
-z-index: 3;
+z-index: 4;
 }
 #city-level .parallax-layer-4 {
 	background-color: #898989;
 }
 
 #building-level {
-z-index: 4;
+z-index: 5;
 }
 #building-level .parallax-layer-4 {
 	background-color: #99cc99;
 }
 
 #underground-level {
-z-index: 5;
+z-index: 6;
 }
 #underground-level .parallax-layer-4 {
 	background-color: #ccb075;
@@ -165,6 +169,8 @@ z-index: 5;
 	margin-right: auto;
 	margin-left: auto;
 	margin-top: 100px;
+	z-index: -1;
+	position: relative;
 }
 
 /* cloud level */
@@ -176,6 +182,9 @@ z-index: 5;
 	margin-top: -100px;
 	float: left;
 	background-repeat: repeat-x;
+	z-index: 2;
+	position: relative;
+
 }
 
 .cloud {
@@ -244,7 +253,7 @@ z-index: 5;
 
 .citybg {
 	background-image: url("cityscape.png");
-	height: 1000px;
+	height: 600px;
 	width: 500px;
 	margin-left: auto;
 	margin-right: auto;
@@ -254,7 +263,7 @@ z-index: 5;
 
 .citybgnorm {
 	background-image: url("cityscapebg2.png");
-	height: 500px;
+	height: 300px;
 	margin-top: -300px;
 	background-repeat: repeat-x;
 	width: 100%;
