fixed modal styling on homepage

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -128,7 +128,7 @@
 </div>
 
 <% if current_business %>
-<!-- Sign up Modal -->
+<!-- Bus Edit Modal -->
 <div class="modal fade" id="buseditModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
