--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -209,7 +209,7 @@ body, html {
     Account Email:  <%= f.text_field :email, :required => true, :class => "form-control input-lg", placeholder: "Email Here..." %>
     <br />
     Password: <%= f.password_field :password, :required => true, :class => "form-control input-lg", placeholder: "Password Here..." %>
-    <%= f.submit "Log in", :class => 'startbuttons' %>
+    <%= f.submit "Log in", :class => "redbutton" %>
   <% end %>
       </div>
       <div class="modal-footer">
