--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -176,7 +176,9 @@ body, html {
         <div class="businesslogin btn" data-toggle="modal" data-target="#loginModal"><span class="loginbutton"><a>business log in</a></span></div>
         <div class="userlogin btn"><span class="loginbutton"><%= link_to "user log in", "auth/twitter", :class => "loginbutton" %></span></div>
       </div>
-  <div>
+  <div class="signup-container">
+  <div class="bussignup">
+    <div><h3>Sign up as a business!</h3></div>
    <%= form_for business_new do |f| %>
       <% flash.each do |k,v| %>
         <div class="col-md-12 alert alert-danger" role="alert">
@@ -185,26 +187,27 @@ body, html {
       <% end %>
       <div class="field">
         <%= f.label :name %><br>
-        <%= f.text_field :name, :required => true %>
+        <%= f.text_field :name, :required => true, :class => "form-control input-lg" %>
       </div>
       <div class="field">
         <%= f.label :email %><br>
-        <%= f.text_field :email, :required => true, :pattern => '[^@]+@[^@]+\.[a-zA-Z]{2,6}' %>
+        <%= f.text_field :email, :required => true, :pattern => '[^@]+@[^@]+\.[a-zA-Z]{2,6}', :class => "form-control input-lg" %>
       </div>
       <div class="field">
         <%= f.label :password %><br>
-        <%= f.password_field :password, :required => true %>
+        <%= f.password_field :password, :required => true, :class => "form-control input-lg" %>
       </div>
       <div class="field">
         <%= f.label :password_confirmation %><br>
-        <%= f.password_field :password_confirmation, :required => true %>
+        <%= f.password_field :password_confirmation, :required => true, :class => "form-control input-lg" %>
       </div>
       <br>
       <div class="actions">
-        <%= f.submit "Sign up" %>
+        <%= f.submit "Sign up", :class => "blackbutton" %>
       </div>
     <% end %> 
   </div>
+</div>
 
     </div>
     <div class="parallax-layer parallax-layer-4">
