--- a/app/assets/stylesheets/business.css
+++ b/app/assets/stylesheets/business.css
@@ -4,6 +4,7 @@
 	border-radius: 5px;
 	background-color: white;
 	padding: 10px;
+	box-shadow: 4px 4px 4px #526E7D;
 }
 
 .campaigns-container {
@@ -42,6 +43,7 @@
 	font-family: "HelveticaNeue-Light";
 	font-weight: bold;
 	font-size: 50px;
+	text-align: center;
 }
 
 .campaigntweetsunder {
