changed the nav bar a bit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 </head>
 <body ng-controller="adController">
 
-  <%= render 'layouts/nav' if !current_page?("/")%>
+  <%= render 'layouts/nav2' if !current_page?("/")%>
 
 <%= yield %>
 
