fixed some more styling things

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -89,7 +89,7 @@
 
           <br>
           <div class="actions">
-            <%= f.submit "Create Campaign", :class => "busbutton" %>
+            <%= f.submit "Create Campaign", :class => "redbutton" %>
           </div>
         <% end %>
         <!-- new campaign end -->
