--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,3 +51,11 @@
 	background-color: transparent;
 	color: black;
 }
+
+.kylesvid {
+	margin-top: 53px;
+	margin-left: 45px;
+	float: left;
+	width: 410px;
+	height: 200px;
+}
