--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -139,15 +139,13 @@ body, html {
   <div id="city-level" class="parallax-group">
     <div class="parallax-layer parallax-layer-quotes">
       <div class="userintro">
-        <strong><p>Advocates!</p></strong>
-        <p>* Sign up and get paid to post ads to help local businesses!</p>
-        <p>* Hipsters, join us, no one else is doing it!</p>
-        <p>* Like literally, no one else is doing it. We have no users. Please sign up.</p>
+        <strong><p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAdvocates!</p></strong>
+        <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp* Sign up and get paid to post ads to help local businesses!</p>
+        <p>&nbsp&nbsp&nbsp* Help out your community and make money doing it!</p>
       </div>
       <div class="busintro">
-        <strong><p>Businesses!</p></strong>
-        <p>* Want a social media campaign, but not spend a bunch of money on it?</p>
-        <p>* You don't even understand the interent, do you?</p>
+        <strong><p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp Businesses!</p></strong>
+        <p>&nbsp &nbsp &nbsp &nbsp * Want a social media campaign, but not spend a bunch of money on it?</p>
         <p>* That's fine, use Advocates! We'll connect you with local users to promote on your behalf!</p>
       </div>
     </div>
