added twitter sign up in homepage, everything seems done

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,6 +37,7 @@
 	background-color: black;
 	border-style: none;
 	color: white;
+	font-color: white;
 	font-family: "HelveticaNeue-Light";
 	font-size: 18px;
 	font-weight: 500;
