--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -276,7 +276,9 @@ body, html {
   <!-- Ticker Feed for bottom of Homepage using our own API json -->
   <div class="ticker">
     <div class="ticker_post" ng-repeat="campaign in campaigns">
-      <div class="status">{{ campaign.status }}</div>
+      &nbsp  &nbsp &nbsp &nbsp
+      {{ campaign.status }} 
+      &nbsp &nbsp &nbsp &nbsp
     </div>
   </div>
 </div>
