--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -62,7 +62,7 @@
 		</div>
 		<% else %>
 		<div class="checkback">
-			<div class="checktext">You've already made 3 posts today. Check back tomorrow!</div>
+			<div class="checktext">You've already made 1 post today. Check back tomorrow!</div>
 		</div>
 		<% end %>
 	</div>
