--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,6 +2,9 @@
 body, html {
   overflow: hidden;
 }
+html {
+  font-size: 14px;
+}
 .parallax-group a { 
   color: black;
   text-decoration: none;
