--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,12 @@
 <head>
   <title>ADvocate</title>
 
+
+  <%= stylesheet_link_tag    'http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' %>
   <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Quicksand:300,400,700' %>
   <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Lato:400,300' %>
+  <%= stylesheet_link_tag 'http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css' %>
+  <%= javascript_include_tag 'http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js' %>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.16/angular.js" %>
   <%= javascript_include_tag 'application' %>
